<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="10"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/menu_search"/>
    <item
        android:id="@+id/locate"
        android:icon="@drawable/ic_action_location_found"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/menu_locate"/>
    <item
        android:id="@+id/layer_chooser"
        android:icon="@drawable/ic_action_add_to_queue"
        android:orderInCategory="105"
        android:showAsAction="ifRoom"
        android:title="@string/menu_layer_chooser"/>
    <item
        android:id="@+id/toggle_fullscreen"
        android:checkable="true"
        android:icon="@drawable/ic_action_full_screen"
        android:orderInCategory="110"
        android:showAsAction="ifRoom"
        android:title="@string/menu_toggle_fullscreen"/>
    <item
        android:id="@+id/reload_button"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="120"
        android:showAsAction="ifRoom"
        android:title="@string/menu_reload"/>
    <item
        android:id="@+id/menu_clear_cookies"
        android:orderInCategory="130"
        android:showAsAction="never"
        android:title="@string/menu_clear_cookies"/>
    <item
        android:id="@+id/menu_send_screenshot"
        android:orderInCategory="140"
        android:showAsAction="never"
        android:title="@string/menu_send_screenshot"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/menu_debug"
        android:checkable="true"
        android:icon="@drawable/ic_action_error"
        android:orderInCategory="190"
        android:showAsAction="never"
        android:title="@string/menu_debug"/>

</menu>