<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/spinnerHighlighter"
        android:paddingLeft="5dip"
        android:text="@string/label_highlighter"/>

    <Spinner
        android:id="@+id/spinnerHighlighter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/spinnerBaseLayer"
        android:paddingLeft="5dip"
        android:text="@string/label_base_layer"/>

    <Spinner
        android:id="@+id/spinnerBaseLayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dip"
        android:text="@string/label_overlay_layers"/>

</LinearLayout>